updating modules to remove vulnerabilities, added styling for loading string

--- a/src/components/Home/_home.scss
+++ b/src/components/Home/_home.scss
@@ -97,6 +97,10 @@
   width: calc(100% - 200px);
   margin: 20px 0;
 
+  .load {
+    color: #D54B97;
+  }
+
   h2 {
     width: 80%;
     color: #fff;
